trunk/Archive2/f6/d350e9cf2978bc/output
main.cpp: In function ‘int main()’:
main.cpp:6:5: error: ‘str’ is not a member of ‘std’
     std::str)sssssstring====
     ^
main.cpp:6:13: error: expected ‘;’ before ‘)’ token
     std::str)sssssstring====
             ^
main.cpp:11:27: error: ‘a’ was not declared in this scope
     std::cout << "a: " << a << '\n';
                           ^
main.cpp:12:27: error: ‘b’ was not declared in this scope
     std::cout << "b: " << b << '\n';
                           ^
